# vizer

./: Dockerfile  Dockerfile.egl  Dockerfile.osmesa  pyproject.toml  reader.py  readme.md  server.py
.github/workflows/: container-image.yml
docker/: entrypoint.sh  prepare.sh  setup_venv.sh
vizer/: app.py  loader.py  quad_view.py  reader.py  simple_view.py  utils.py
vizer/plugins/: color_mappyer.py  extract_voi.py  outline_filter.py
vizer/readers/: __init__.py  raw_reader.py
vizer/views/: __init__.py  base.py  blank.py  crop.py  quad.py  segmentation.py  segmentation_v2.py  simple.py
