[project]
name = "vizer"
version = "0.1.0"
description = "Data Visualization Application"
requires-python = ">=3.7"
dependencies = [
    "aiohttp==3.8.5",
    "aiosignal==1.3.1",
    "async-timeout==4.0.3",
    "attrs==23.1.0",
    "charset-normalizer==3.3.0",
    "idna==3.4",
    "mpmath==1.3.0",
    "multidict==6.0.4",
    "quantiphy==2.19",
    "sympy==1.12",
    "trame==2.5.2",
    "trame-client==2.12.0",
    "trame-components==2.2.1",
    "trame-deckgl==2.0.2",
    "trame-markdown==2.0.2",
    "trame-matplotlib==2.0.2",
    "trame-plotly==2.1.1",
    "trame-rca==0.4.0",
    "trame-router==2.1.0",
    "trame-server==2.12.0",
    "trame-simput==2.3.3",
    "trame-vega==2.0.3",
    "trame-vtk==2.5.8",
    "trame-vuetify==2.3.1",
    "wslink==1.12.2",
    "yarl==1.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest"
]
